2002-07-10  Tony Addyman  <A.M.Addyman@salford.ac.uk>

	* lisp/xslt-process.el (Repository): Correct error preventing "Other" option working for PDF viewer.

2002-04-15  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* java/avalon-framework-4.0.jar, java/fop-0.20.1.jar,
	java/fop-0.20.3.jar, java/logkit-1.0.jar, java/saxon-6.3.jar,
	java/saxon-6.5.2.jar, java/xerces-1.2.3.jar, java/xerces.jar,
	java/xslt.jar: Updated to new versions.

	* java/Makefile: Updated CLASSPATH to point to the latest jar
	files.

2001-08-20  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* lisp/xslt-process.el: Check if xslt-process-docbook-install-dir
	is defined before accessing its value.

	* lisp/xslt-process.el: Moved around function definitions to avoid
	undefined function messages.

2001-08-19  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* doc/Makefile: Generate version.texi here.

	* Makefile: Generate version.texi in the doc/ directory.

	* java/xslt/debugger/FOPMessageListener.java: Remove the println
	statements.

	* java/xslt/debugger/Manager.java: Remove the println statements.

	* lisp/xslt-process.el: Updated version to 2.1. Added options to
	customize the PDF viewer and the DocBook installation directory.

	* doc/apply-xslt.png: Regenerated to show the "View PDF" menu
	item.
	
	* doc/xslt-process.texi.in: Added info on generating PDF.

	* doc/xslt-process.texi.in: Added line of code for making public
	the xslt-process-install-docbook.

	* lisp/xslt-process.el: Added the ability to automatically
	register Docbook-XSL files by specifying the installation
	directory of DocBook-XSL.

2001-08-16  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* doc/xslt-process.texi.in: Added change log item about the FOP
	support.

	* tests/fo/glossary.xsl: Added.

	* tests/fo/glossary.xml: Added.

	* lisp/xslt-process.el: Added support for PDF rendering using
	Apache's FOP processor.

	* java/Makefile: Added the FOP jar file in the classpath.

	* java/xslt/debugger/cmdline/EmacsObserver.java: Implemented
	displayInfo.
