@@ -1,6 +1,10 @@
+2002-07-11  Tony Addyman  <A.M.Addyman@salford.ac.uk>
+
+	* lisp/xslt-speedbar.el: Reformat multiline text values to a single lineto avoid display problems in speedbar. A paragraph character is the separator.
+
 2002-07-10  Tony Addyman  <A.M.Addyman@salford.ac.uk>
 
-	* lisp/xslt-process.el (Repository): Correct error preventing "Other" option working for PDF viewer.
+	* lisp/xslt-process.el: Correct error preventing "Other" option working for PDF viewer.
 
 2002-04-15  Ovidiu Predescu  <ovidiu@cup.hp.com>
 
